--- a/nvme_rhel_81.adoc
+++ b/nvme_rhel_81.adoc
@@ -15,7 +15,7 @@ summary: Describes how to configure NVMe/FC for RHEL 8.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-NVMe/FC is supported on ONTAP 9.6 or later for Red Hat Enterprise Linux (RHEL) 8.1. A RHEL 8.1 host can run both NVMe and SCSI traffic through the same fibre channel initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers.
+NVMe/FC is supported on ONTAP 9.6 or later for Red Hat Enterprise Linux (RHEL) 8.1. A RHEL 8.1 host can run both NVMe and SCSI traffic through the same FC initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers.
 
 See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported configurations.
 
@@ -23,9 +23,9 @@ See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix
 
 * Native NVMe/FC auto-connect scripts are not available in the `nvme-cli` package. You can use the host bus adapter (HBA) vendor-provided external auto-connect script.
 
-* NVMe multipath is disabled by default. Enable it manually. 
+* NVMe multipath is disabled by default. Therefore, you need to enable it manually. 
 
-* By default, round-robin load balancing is not enabled. You must write a `udev` rule to enable this functionality. 
+* By default, round-robin load balancing is not enabled. You can enable this functionality by writing a `udev` rule. 
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
@@ -37,7 +37,7 @@ You can use the following procedure to enable NVMe/FC.
 
 . Install Red Hat Enterprise Linux 8.1 on the server.
 
-. After the installation is complete, verify that you are running the specified Red Hat Enterprise Linux kernel. 
+. After the installation is complete, verify that you are running the specified RHEL kernel: 
 +
 ----
 # uname -r
@@ -46,7 +46,7 @@ You can use the following procedure to enable NVMe/FC.
 +
 See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported versions.
 
-. Install the `nvme-cli-1.8.1-3.el8` package.
+. Install the `nvme-cli-1.8.1-3.el8` package:
 +
 ----
 # rpm -qa|grep nvme-cli
@@ -59,14 +59,14 @@ nvme-cli-1.8.1-3.el8.x86_64
 # grubby –args=nvme_core.multipath=Y –update-kernel /boot/vmlinuz-4.18.0-147.el8.x86_64
 ----
 
-. Add the following string as a separate udev rule at `/lib/udev/rules.d/71-nvme-iopolicy-netapp-ONTAP.rules`. This enables round-robin load balancing for NVMe multipath.
+. Add the following string as a separate udev rule at `/lib/udev/rules.d/71-nvme-iopolicy-netapp-ONTAP.rules`. This enables round-robin load balancing for NVMe multipath:
 +
 ----
 # Enable round-robin for NetApp ONTAP
 ACTION==”add”, SUBSYSTEM==”nvme-subsystem”, ATTR{model}==”NetApp ONTAP Controller”, ATTR{iopolicy}=”round-robin
 ----
 
-. On the RHEL 8.1 host, check the host NQN string at `/etc/nvme/hostnqn` and verify that it matches the host NQN string for the corresponding subsystem on the ONTAP array.
+. On the RHEL 8.1 host, check the host NQN string at `/etc/nvme/hostnqn` and verify that it matches the host NQN string for the corresponding subsystem on the ONTAP array:
 +
 ----
 # cat /etc/nvme/hostnqn
@@ -105,7 +105,7 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 
-. Copy and install the Broadcom lpfc outbox driver and auto-connect scripts.
+. Copy and install the Broadcom lpfc outbox driver and auto-connect scripts:
 +
 ----
 # tar -xvzf elx-lpfc-dd-rhel8-12.4.243.20-ds-1.tar.gz
@@ -117,7 +117,7 @@ NOTE: The native drivers that are bundled with the OS are called the inbox drive
 
 . Reboot the host.
 
-. Verify that you are using the recommended Broadcom lpfc firmware, outbox driver, and auto-connect package versions.
+. Verify that you are using the recommended Broadcom lpfc firmware, outbox driver, and auto-connect package versions:
 +
 ----
 # cat /sys/class/scsi_host/host*/fwrev
@@ -135,14 +135,14 @@ NOTE: The native drivers that are bundled with the OS are called the inbox drive
 nvmefc-connect-12.6.61.0-1.noarch
 ----
 
-. Verify that `lpfc_enable_fc4_type` is set to 3.
+. Verify that `lpfc_enable_fc4_type` is set to 3:
 +
 ----
 # cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 3
 ----
 
-. Verify that the initiator ports are up and running.
+. Verify that the initiator ports are up and running:
 +
 ----
 # cat /sys/class/fc_host/host*/port_name
@@ -156,7 +156,7 @@ Online
 Online
 ----
 
-. Verify that the NVMe/FC initiator ports are enabled, running, and you can see the target LIFs.
+. Verify that the NVMe/FC initiator ports are enabled, running, and you can see the target LIFs:
 +
 ----
 # cat /sys/class/scsi_host/host*/nvme_info
