--- a/nvme_rhel_81.adoc
+++ b/nvme_rhel_81.adoc
@@ -53,7 +53,7 @@ See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix
 nvme-cli-1.8.1-3.el8.x86_64
 ----
 
-. Enable in-kernel NVMe multipath.
+. Enable in-kernel NVMe multipath:
 +
 ----
 # grubby –args=nvme_core.multipath=Y –update-kernel /boot/vmlinuz-4.18.0-147.el8.x86_64
