--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -330,6 +330,8 @@ sectype: none
 
 == Validate NVMe-oF
 
+You can use the following procedure to validate NVMe-oF.
+
 .Steps
 
 . Verify that in-kernel NVMe multipath is indeed enabled by checking:
