--- a/nvme_rhel_81.adoc
+++ b/nvme_rhel_81.adoc
@@ -90,6 +90,8 @@ If the host NQN strings do not match, use the `vserver modify` command to update
 
 You can use the following procedure to configure a Broadcom FC adapter.
 
+.Steps
+
 . Verify that you are using the supported adapter. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported adapters.
 
 +
@@ -176,6 +178,8 @@ include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 ==	Validate NVMe/FC
 
 You can use the following procedure to validate NVMe/FC.
+
+.Steps
 
 include::_include/nvme/reuse_validating_nvme_fc_rhel.adoc[]
 
