--- a/nvme_rhel_82.adoc
+++ b/nvme_rhel_82.adoc
@@ -127,6 +127,8 @@ include::_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part2.adoc[]
 
 You can use the following procedure to validate NVMe/FC.
 
+.Steps
+
 include::_include/nvme/reuse_validating_nvme_fc_rhel.adoc[]
 
 // JIRA-1289 20-Sep-2023
