--- a/nvme_rhel_86.adoc
+++ b/nvme_rhel_86.adoc
@@ -274,7 +274,11 @@ sectype: none
 
 == Validate NVMe-oF
 
-. Verify that in-kernel NVMe multipath is indeed enabled by checking:
+You can use the following procedure to validate NVMe-oF.
+
+.Steps
+
+. Verify that in-kernel NVMe multipath is enabled:
 +
 ----
 # cat /sys/module/nvme_core/parameters/multipath
