--- a/nvme_rhel_86.adoc
+++ b/nvme_rhel_86.adoc
@@ -87,7 +87,7 @@ NOTE: If the host NQN strings do not match, you should use the `vserver modify` 
 +
 [NOTE]
 ====
-If you intend to run both NVMe & SCSI co-existent traffic on the same host, it is recommended to use in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from dm-multipath to prevent dm-multipath from claiming these namespace devices. This can be done by adding the enable_foreign setting to the `/etc/multipath.conf` file:
+If you intend to run both NVMe and SCSI co-existent traffic on the same host, NetApp recommends using in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from dm-multipath to prevent dm-multipath from claiming these namespace devices. This can be done by adding the enable_foreign setting to the `/etc/multipath.conf` file:
 
 ----
 # cat /etc/multipath.conf
@@ -96,10 +96,8 @@ defaults {
 }
 ----
 
+Restart the multipathd daemon by running a `systemctl restart multipathd` command to allow the new setting to take effect.
 ====
-+
-. Restart the multipathd daemon by running a `systemctl restart multipathd` command to allow the new setting to take effect.
-
 
 == Configure NVMe/FC
 
