--- a/nvme_rhel_90.adoc
+++ b/nvme_rhel_90.adoc
@@ -23,8 +23,8 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 == Features
 
-* Starting RHEL 9.0, NVMe/TCP is no longer a technology preview feature (unlike RHEL 8) but a fully supported enterprise feature itself.
-* Starting RHEL 9.0, in-kernel NVMe multipath is enabled for NVMe namespaces by default, without the need for explicit settings (unlike RHEL 8).
+* Beginning with RHEL 9.0, NVMe/TCP is no longer a technology preview feature (unlike RHEL 8) but a fully supported enterprise feature itself.
+* Beginning with RHEL 9.0, in-kernel NVMe multipath is enabled for NVMe namespaces by default, without the need for explicit settings (unlike RHEL 8).
 
 
 ==  Known limitations
