--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -26,7 +26,7 @@ The following support is available for the NVMe-oF host configuration for RHEL 9
 * Use of NVMe and SCSI co-existent traffic on the same host on a given host bus adapter (HBA), without the explicit dm-multipath settings to prevent claiming NVMe namespaces.
 
 
-Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for accurate details regarding supported configurations.
+Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for accurate details regarding supported configurations.
 
 == Features
 
